--- a/courses/index.html
+++ b/courses/index.html
@@ -5,7 +5,7 @@
 <meta name=author content="baretto">
 <meta name=generator content="Hugo 0.87.0">
 <meta name=viewport content="width=device-width,initial-scale=1">
-<title>Baretto</title>
+<title>Courses</title>
 <link rel=icon href=https://baretto-labs.github.io/images/favicon.ico>
 <link rel=stylesheet href=https://baretto-labs.github.io/plugins/bootstrap/bootstrap.min.css>
 <link rel=stylesheet href=https://baretto-labs.github.io/plugins/ionicons/ionicons.min.css>
@@ -48,22 +48,70 @@
 </div>
 </div>
 </section>
-<section id=hero-area style=background-image:url(https://baretto-labs.github.io/images/logo.png)>
+<section class=global-page-header>
 <div class=container>
 <div class=row>
-<div class="col-md-12 text-center">
-<div class="block wow fadeInUp" data-wow-delay=.3s>
-<section class=cd-intro>
-<h1 class="wow fadeInUp animated cd-headline slide" data-wow-delay=.4s>
-<span>HI, WE ARE Baretto</span>
-<br>
-<span class="cd-words-wrapper text-center">
-</span>
-</h1>
-</section>
-<h2 class="wow fadeInUp animated" data-wow-delay=.6s>artisan du changement</h2>
-<a class="btn-lines dark light wow fadeInUp animated btn btn-default btn-green hvr-bounce-to-right" data-wow-delay=.9s href target=_blank>Download More</a>
+<div class=col-md-12>
+<div class=block>
+<h2>Courses</h2>
+<ol class="breadcrumb list-inline text-center">
+<li class=list-inline-item>
+<a href=https://baretto-labs.github.io/>
+<i class=ion-ios-home></i>
+Home &nbsp; &nbsp;/
+</a>
+</li>
+<li class="active list-inline-item">Courses</li>
+</ol>
 </div>
+</div>
+</div>
+</div>
+</section>
+<section id=blog-full-width>
+<div class=container>
+<div class=row>
+<div class=col-md-12>
+<article class="wow fadeInDown" data-wow-delay=.3s data-wow-duration=500ms>
+<div class=blog-post-image>
+<a href=https://baretto-labs.github.io/courses/agility/>
+<img class=img-fluid src=https://baretto-labs.github.io/images/courses/item-2.jpg alt=post-image>
+</a>
+</div>
+<div class=blog-content>
+<h2 class=blogpost-title>
+<a href=https://baretto-labs.github.io/courses/agility/>Agility</a>
+</h2>
+<div class=blog-meta>
+<span>Thursday, Jul 12, 2018</span>
+</div>
+<p>
+Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas sit expedita, iusto repellendus cumque, officia architecto consequatur illo fuga eum sed ut autem eos voluptas. Nemo, a, rem! Atque quisquam aperiam eaque tenetur autem, soluta itaque omnis. Minus nesciunt, sint, animi illum quo ab voluptate esse delectus unde maiores iure, quasi a suscipit ipsam aliquid voluptatem. Perspiciatis eveniet, pariatur illum aut cum dolor neque consequatur error aliquid facilis in quasi temporibus assumenda tempore, doloremque autem saepe enim nihil.
+</p>
+<a href=https://baretto-labs.github.io/courses/agility/ class="btn btn-dafault btn-details hvr-bounce-to-right">Continue
+Reading</a>
+</div>
+</article>
+<article class="wow fadeInDown" data-wow-delay=.3s data-wow-duration=500ms>
+<div class=blog-post-image>
+<a href=https://baretto-labs.github.io/courses/quality/>
+<img class=img-fluid src=https://baretto-labs.github.io/images/courses/item-2.jpg alt=post-image>
+</a>
+</div>
+<div class=blog-content>
+<h2 class=blogpost-title>
+<a href=https://baretto-labs.github.io/courses/quality/>Quality</a>
+</h2>
+<div class=blog-meta>
+<span>Thursday, Jul 12, 2018</span>
+</div>
+<p>
+Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas sit expedita, iusto repellendus cumque, officia architecto consequatur illo fuga eum sed ut autem eos voluptas. Nemo, a, rem! Atque quisquam aperiam eaque tenetur autem, soluta itaque omnis. Minus nesciunt, sint, animi illum quo ab voluptate esse delectus unde maiores iure, quasi a suscipit ipsam aliquid voluptatem. Perspiciatis eveniet, pariatur illum aut cum dolor neque consequatur error aliquid facilis in quasi temporibus assumenda tempore, doloremque autem saepe enim nihil.
+</p>
+<a href=https://baretto-labs.github.io/courses/quality/ class="btn btn-dafault btn-details hvr-bounce-to-right">Continue
+Reading</a>
+</div>
+</article>
 </div>
 </div>
 </div>
