--- a/about/index.html
+++ b/about/index.html
@@ -36,7 +36,10 @@
 <a class=nav-link href=https://baretto-labs.github.io/about>About</a>
 </li>
 <li class=nav-item>
-<a class=nav-link href=https://baretto-labs.github.io/courses>Courses</a>
+<a class=nav-link href=https://baretto-labs.github.io/formations>Formations</a>
+</li>
+<li class=nav-item>
+<a class=nav-link href=https://baretto-labs.github.io/services>Services</a>
 </li>
 <li class=nav-item>
 <a class=nav-link href=https://baretto-labs.github.io/blog>Blog</a>
@@ -112,6 +115,20 @@ Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium dolor
 </div>
 </div>
 </section>
+<section id=call-to-action>
+<div class=container>
+<div class=row>
+<div class=col-md-12>
+<div class=block>
+<h2 class="title wow fadeInDown" data-wow-delay=.3s data-wow-duration=500ms>Envie de discuter ?</h1>
+<p class="wow fadeInDown" data-wow-delay=.5s data-wow-duration=500ms>
+Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis,<br>possimus commodi, fugiat magnam temporibus vero magni recusandae? Dolore, maxime praesentium.</p>
+<a href=/contact class="btn btn-default btn-contact wow fadeInDown" data-wow-delay=.7s data-wow-duration=500ms>Contact with me</a>
+</div>
+</div>
+</div>
+</div>
+</section>
 <footer id=footer>
 <div class=container>
 <div class="row content-justify-between">
@@ -127,6 +144,9 @@ Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium dolor
 </div>
 <div class="col-md-4 col-12">
 <ul class="social text-center text-md-right text-lg-right">
+<li><a href=#><i class=ion-social-facebook></i></a></li>
+<li><a href=#><i class=ion-social-instagram></i></a></li>
+<li><a href=#><i class=ion-social-linkedin></i></a></li>
 </ul>
 </div>
 </div>
