--- a/formation/quality/index.html
+++ b/formation/quality/index.html
@@ -1,11 +1,11 @@
 <!doctype html><html lang=en-us><head>
 <meta charset=utf-8>
 <meta charset=utf-8>
-<meta name=description content="Baretto website">
+<meta name=description content="This is meta description">
 <meta name=author content="baretto">
 <meta name=generator content="Hugo 0.87.0">
 <meta name=viewport content="width=device-width,initial-scale=1">
-<title>Categories</title>
+<title>Quality</title>
 <link rel=icon href=https://baretto-labs.github.io/images/favicon.ico>
 <link rel=stylesheet href=https://baretto-labs.github.io/plugins/bootstrap/bootstrap.min.css>
 <link rel=stylesheet href=https://baretto-labs.github.io/plugins/ionicons/ionicons.min.css>
@@ -56,25 +56,27 @@
 <div class=row>
 <div class=col-md-12>
 <div class=block>
-<h2>Categories</h2>
-<ol class="breadcrumb list-inline text-center">
-<li class=list-inline-item>
-<a href=https://baretto-labs.github.io/>
-<i class=ion-ios-home></i>
-Home &nbsp; &nbsp;/
-</a>
-</li>
-<li class="active list-inline-item">Categories</li>
-</ol>
+<h2>Quality</h2>
+<div class=portfolio-meta>
+<span>Thursday, Jul 12, 2018</span>|
+<span> Tags:
+</span>
+</div>
 </div>
 </div>
 </div>
 </div>
 </section>
-<section id=blog-full-width>
+<section class=single-post>
 <div class=container>
 <div class=row>
 <div class=col-md-12>
+<div class=post-img>
+<img class=img-fluid alt src=https://baretto-labs.github.io/images/courses/item-2.jpg>
+</div>
+<div class=post-content>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas sit expedita, iusto repellendus cumque, officia architecto consequatur illo fuga eum sed ut autem eos voluptas. Nemo, a, rem! Atque quisquam aperiam eaque tenetur autem, soluta itaque omnis. Minus nesciunt, sint, animi illum quo ab voluptate esse delectus unde maiores iure, quasi a suscipit ipsam aliquid voluptatem. Perspiciatis eveniet, pariatur illum aut cum dolor neque consequatur error aliquid facilis in quasi temporibus assumenda tempore, doloremque autem saepe enim nihil. Voluptates asperiores ullam voluptate quas similique ratione quia hic, eum distinctio laboriosam, consectetur tempora voluptatibus optio natus cumque est necessitatibus dolore alias.</p>
+</div>
 </div>
 </div>
 </div>
