--- a/services/coaching/index.html
+++ b/services/coaching/index.html
@@ -5,7 +5,7 @@
 <meta name=author content="baretto">
 <meta name=generator content="Hugo 0.87.0">
 <meta name=viewport content="width=device-width,initial-scale=1">
-<title>Quality</title>
+<title>Coaching</title>
 <link rel=icon href=https://baretto-labs.github.io/images/favicon.ico>
 <link rel=stylesheet href=https://baretto-labs.github.io/plugins/bootstrap/bootstrap.min.css>
 <link rel=stylesheet href=https://baretto-labs.github.io/plugins/ionicons/ionicons.min.css>
@@ -36,7 +36,10 @@
 <a class=nav-link href=https://baretto-labs.github.io/about>About</a>
 </li>
 <li class=nav-item>
-<a class=nav-link href=https://baretto-labs.github.io/courses>Courses</a>
+<a class=nav-link href=https://baretto-labs.github.io/formations>Formations</a>
+</li>
+<li class=nav-item>
+<a class=nav-link href=https://baretto-labs.github.io/services>Services</a>
 </li>
 <li class=nav-item>
 <a class=nav-link href=https://baretto-labs.github.io/blog>Blog</a>
@@ -53,10 +56,10 @@
 <div class=row>
 <div class=col-md-12>
 <div class=block>
-<h2>Quality</h2>
+<h2>Coaching</h2>
 <div class=portfolio-meta>
 <span>2018-07-12</span>|
-<span> Category: quality, courses</span>|
+<span> Category: agility, courses</span>|
 <span> website:
 <a href=https://www.themefisher.com>https://www.themefisher.com</a>
 </span>
@@ -80,13 +83,27 @@
 <div class=col-lg-4>
 <div class=work-single-sidebar>
 <h5>Clients</h5>
-<h6>mydigitalschool</h6>
+<h6>eilco</h6>
 <h5>date</h5>
-<h6>November 20, 2021</h6>
+<h6>November 20, 2017</h6>
 <h5>category</h5>
 <h6>Investment, Business</h6>
 <h5>locations</h5>
-<h6>Lille</h6>
+<h6>calais</h6>
+</div>
+</div>
+</div>
+</div>
+</section>
+<section id=call-to-action>
+<div class=container>
+<div class=row>
+<div class=col-md-12>
+<div class=block>
+<h2 class="title wow fadeInDown" data-wow-delay=.3s data-wow-duration=500ms>Envie de discuter ?</h1>
+<p class="wow fadeInDown" data-wow-delay=.5s data-wow-duration=500ms>
+Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis,<br>possimus commodi, fugiat magnam temporibus vero magni recusandae? Dolore, maxime praesentium.</p>
+<a href=/contact class="btn btn-default btn-contact wow fadeInDown" data-wow-delay=.7s data-wow-duration=500ms>Contact with me</a>
 </div>
 </div>
 </div>
@@ -107,6 +124,9 @@
 </div>
 <div class="col-md-4 col-12">
 <ul class="social text-center text-md-right text-lg-right">
+<li><a href=#><i class=ion-social-facebook></i></a></li>
+<li><a href=#><i class=ion-social-instagram></i></a></li>
+<li><a href=#><i class=ion-social-linkedin></i></a></li>
 </ul>
 </div>
 </div>
