--- a/formation/agility/index.html
+++ b/formation/agility/index.html
@@ -1,11 +1,11 @@
 <!doctype html><html lang=en-us><head>
 <meta charset=utf-8>
 <meta charset=utf-8>
-<meta name=description content="Baretto website">
+<meta name=description content="This is meta description">
 <meta name=author content="baretto">
 <meta name=generator content="Hugo 0.87.0">
 <meta name=viewport content="width=device-width,initial-scale=1">
-<title>Courses</title>
+<title>Agility</title>
 <link rel=icon href=https://baretto-labs.github.io/images/favicon.ico>
 <link rel=stylesheet href=https://baretto-labs.github.io/plugins/bootstrap/bootstrap.min.css>
 <link rel=stylesheet href=https://baretto-labs.github.io/plugins/ionicons/ionicons.min.css>
@@ -36,7 +36,10 @@
 <a class=nav-link href=https://baretto-labs.github.io/about>About</a>
 </li>
 <li class=nav-item>
-<a class=nav-link href=https://baretto-labs.github.io/courses>Courses</a>
+<a class=nav-link href=https://baretto-labs.github.io/formations>Formations</a>
+</li>
+<li class=nav-item>
+<a class=nav-link href=https://baretto-labs.github.io/services>Services</a>
 </li>
 <li class=nav-item>
 <a class=nav-link href=https://baretto-labs.github.io/blog>Blog</a>
@@ -53,65 +56,41 @@
 <div class=row>
 <div class=col-md-12>
 <div class=block>
-<h2>Courses</h2>
-<ol class="breadcrumb list-inline text-center">
-<li class=list-inline-item>
-<a href=https://baretto-labs.github.io/>
-<i class=ion-ios-home></i>
-Home &nbsp; &nbsp;/
-</a>
-</li>
-<li class="active list-inline-item">Courses</li>
-</ol>
+<h2>Agility</h2>
+<div class=portfolio-meta>
+<span>Thursday, Jul 12, 2018</span>|
+<span> Tags:
+</span>
+</div>
 </div>
 </div>
 </div>
 </div>
 </section>
-<section id=blog-full-width>
+<section class=single-post>
 <div class=container>
 <div class=row>
 <div class=col-md-12>
-<article class="wow fadeInDown" data-wow-delay=.3s data-wow-duration=500ms>
-<div class=blog-post-image>
-<a href=https://baretto-labs.github.io/courses/agility/>
-<img class=img-fluid src=https://baretto-labs.github.io/images/courses/item-2.jpg alt=post-image>
-</a>
+<div class=post-img>
+<img class=img-fluid alt src=https://baretto-labs.github.io/images/courses/item-2.jpg>
 </div>
-<div class=blog-content>
-<h2 class=blogpost-title>
-<a href=https://baretto-labs.github.io/courses/agility/>Agility</a>
-</h2>
-<div class=blog-meta>
-<span>Thursday, Jul 12, 2018</span>
+<div class=post-content>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas sit expedita, iusto repellendus cumque, officia architecto consequatur illo fuga eum sed ut autem eos voluptas. Nemo, a, rem! Atque quisquam aperiam eaque tenetur autem, soluta itaque omnis. Minus nesciunt, sint, animi illum quo ab voluptate esse delectus unde maiores iure, quasi a suscipit ipsam aliquid voluptatem. Perspiciatis eveniet, pariatur illum aut cum dolor neque consequatur error aliquid facilis in quasi temporibus assumenda tempore, doloremque autem saepe enim nihil. Voluptates asperiores ullam voluptate quas similique ratione quia hic, eum distinctio laboriosam, consectetur tempora voluptatibus optio natus cumque est necessitatibus dolore alias.</p>
 </div>
-<p>
-Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas sit expedita, iusto repellendus cumque, officia architecto consequatur illo fuga eum sed ut autem eos voluptas. Nemo, a, rem! Atque quisquam aperiam eaque tenetur autem, soluta itaque omnis. Minus nesciunt, sint, animi illum quo ab voluptate esse delectus unde maiores iure, quasi a suscipit ipsam aliquid voluptatem. Perspiciatis eveniet, pariatur illum aut cum dolor neque consequatur error aliquid facilis in quasi temporibus assumenda tempore, doloremque autem saepe enim nihil.
-</p>
-<a href=https://baretto-labs.github.io/courses/agility/ class="btn btn-dafault btn-details hvr-bounce-to-right">Continue
-Reading</a>
 </div>
-</article>
-<article class="wow fadeInDown" data-wow-delay=.3s data-wow-duration=500ms>
-<div class=blog-post-image>
-<a href=https://baretto-labs.github.io/courses/quality/>
-<img class=img-fluid src=https://baretto-labs.github.io/images/courses/item-2.jpg alt=post-image>
-</a>
 </div>
-<div class=blog-content>
-<h2 class=blogpost-title>
-<a href=https://baretto-labs.github.io/courses/quality/>Quality</a>
-</h2>
-<div class=blog-meta>
-<span>Thursday, Jul 12, 2018</span>
 </div>
-<p>
-Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas sit expedita, iusto repellendus cumque, officia architecto consequatur illo fuga eum sed ut autem eos voluptas. Nemo, a, rem! Atque quisquam aperiam eaque tenetur autem, soluta itaque omnis. Minus nesciunt, sint, animi illum quo ab voluptate esse delectus unde maiores iure, quasi a suscipit ipsam aliquid voluptatem. Perspiciatis eveniet, pariatur illum aut cum dolor neque consequatur error aliquid facilis in quasi temporibus assumenda tempore, doloremque autem saepe enim nihil.
-</p>
-<a href=https://baretto-labs.github.io/courses/quality/ class="btn btn-dafault btn-details hvr-bounce-to-right">Continue
-Reading</a>
+</section>
+<section id=call-to-action>
+<div class=container>
+<div class=row>
+<div class=col-md-12>
+<div class=block>
+<h2 class="title wow fadeInDown" data-wow-delay=.3s data-wow-duration=500ms>Envie de discuter ?</h1>
+<p class="wow fadeInDown" data-wow-delay=.5s data-wow-duration=500ms>
+Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis,<br>possimus commodi, fugiat magnam temporibus vero magni recusandae? Dolore, maxime praesentium.</p>
+<a href=/contact class="btn btn-default btn-contact wow fadeInDown" data-wow-delay=.7s data-wow-duration=500ms>Contact with me</a>
 </div>
-</article>
 </div>
 </div>
 </div>
@@ -131,6 +110,9 @@ Reading</a>
 </div>
 <div class="col-md-4 col-12">
 <ul class="social text-center text-md-right text-lg-right">
+<li><a href=#><i class=ion-social-facebook></i></a></li>
+<li><a href=#><i class=ion-social-instagram></i></a></li>
+<li><a href=#><i class=ion-social-linkedin></i></a></li>
 </ul>
 </div>
 </div>
