--- a/formation/index.html
+++ b/formation/index.html
@@ -5,7 +5,7 @@
 <meta name=author content="baretto">
 <meta name=generator content="Hugo 0.87.0">
 <meta name=viewport content="width=device-width,initial-scale=1">
-<title>Categories</title>
+<title>Formations</title>
 <link rel=icon href=https://baretto-labs.github.io/images/favicon.ico>
 <link rel=stylesheet href=https://baretto-labs.github.io/plugins/bootstrap/bootstrap.min.css>
 <link rel=stylesheet href=https://baretto-labs.github.io/plugins/ionicons/ionicons.min.css>
@@ -56,7 +56,7 @@
 <div class=row>
 <div class=col-md-12>
 <div class=block>
-<h2>Categories</h2>
+<h2>Formations</h2>
 <ol class="breadcrumb list-inline text-center">
 <li class=list-inline-item>
 <a href=https://baretto-labs.github.io/>
@@ -64,7 +64,7 @@
 Home &nbsp; &nbsp;/
 </a>
 </li>
-<li class="active list-inline-item">Categories</li>
+<li class="active list-inline-item">Formations</li>
 </ol>
 </div>
 </div>
@@ -75,6 +75,46 @@ Home &nbsp; &nbsp;/
 <div class=container>
 <div class=row>
 <div class=col-md-12>
+<article class="wow fadeInDown" data-wow-delay=.3s data-wow-duration=500ms>
+<div class=blog-post-image>
+<a href=https://baretto-labs.github.io/formation/agility/>
+<img class=img-fluid src=https://baretto-labs.github.io/images/courses/item-2.jpg alt=post-image>
+</a>
+</div>
+<div class=blog-content>
+<h2 class=blogpost-title>
+<a href=https://baretto-labs.github.io/formation/agility/>Agility</a>
+</h2>
+<div class=blog-meta>
+<span>Thursday, Jul 12, 2018</span>
+</div>
+<p>
+Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas sit expedita, iusto repellendus cumque, officia architecto consequatur illo fuga eum sed ut autem eos voluptas. Nemo, a, rem! Atque quisquam aperiam eaque tenetur autem, soluta itaque omnis. Minus nesciunt, sint, animi illum quo ab voluptate esse delectus unde maiores iure, quasi a suscipit ipsam aliquid voluptatem. Perspiciatis eveniet, pariatur illum aut cum dolor neque consequatur error aliquid facilis in quasi temporibus assumenda tempore, doloremque autem saepe enim nihil.
+</p>
+<a href=https://baretto-labs.github.io/formation/agility/ class="btn btn-dafault btn-details hvr-bounce-to-right">Continue
+Reading</a>
+</div>
+</article>
+<article class="wow fadeInDown" data-wow-delay=.3s data-wow-duration=500ms>
+<div class=blog-post-image>
+<a href=https://baretto-labs.github.io/formation/quality/>
+<img class=img-fluid src=https://baretto-labs.github.io/images/courses/item-2.jpg alt=post-image>
+</a>
+</div>
+<div class=blog-content>
+<h2 class=blogpost-title>
+<a href=https://baretto-labs.github.io/formation/quality/>Quality</a>
+</h2>
+<div class=blog-meta>
+<span>Thursday, Jul 12, 2018</span>
+</div>
+<p>
+Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas sit expedita, iusto repellendus cumque, officia architecto consequatur illo fuga eum sed ut autem eos voluptas. Nemo, a, rem! Atque quisquam aperiam eaque tenetur autem, soluta itaque omnis. Minus nesciunt, sint, animi illum quo ab voluptate esse delectus unde maiores iure, quasi a suscipit ipsam aliquid voluptatem. Perspiciatis eveniet, pariatur illum aut cum dolor neque consequatur error aliquid facilis in quasi temporibus assumenda tempore, doloremque autem saepe enim nihil.
+</p>
+<a href=https://baretto-labs.github.io/formation/quality/ class="btn btn-dafault btn-details hvr-bounce-to-right">Continue
+Reading</a>
+</div>
+</article>
 </div>
 </div>
 </div>
