--- a/index.html
+++ b/index.html
@@ -36,7 +36,10 @@
 <a class=nav-link href=https://baretto-labs.github.io/about>About</a>
 </li>
 <li class=nav-item>
-<a class=nav-link href=https://baretto-labs.github.io/courses>Courses</a>
+<a class=nav-link href=https://baretto-labs.github.io/formations>Formations</a>
+</li>
+<li class=nav-item>
+<a class=nav-link href=https://baretto-labs.github.io/services>Services</a>
 </li>
 <li class=nav-item>
 <a class=nav-link href=https://baretto-labs.github.io/blog>Blog</a>
@@ -55,14 +58,205 @@
 <div class="block wow fadeInUp" data-wow-delay=.3s>
 <section class=cd-intro>
 <h1 class="wow fadeInUp animated cd-headline slide" data-wow-delay=.4s>
-<span>HI, WE ARE Baretto</span>
+<span>Chez Baretto, nous sommes</span>
 <br>
 <span class="cd-words-wrapper text-center">
+<b class=is-visible style=white-space:normal>CRAFTMEN</b>
+<b style=white-space:normal>AGILISTS</b>
+<b style=white-space:normal>PRODUCT LOVER</b>
 </span>
 </h1>
 </section>
-<h2 class="wow fadeInUp animated" data-wow-delay=.6s>artisan du changement</h2>
+<h2 class="wow fadeInUp animated" data-wow-delay=.6s>Inspirés par la philosophie du Kaizen, passionnés par le lean et l’Agilité notre mission est de devenir par l’apport de valeur les artisans de votre changement.</h2>
 <a class="btn-lines dark light wow fadeInUp animated btn btn-default btn-green hvr-bounce-to-right" data-wow-delay=.9s href target=_blank>Download More</a>
+</div>
+</div>
+</div>
+</div>
+</section>
+<section id=works class=works>
+<div class=container>
+<div class=section-heading>
+<h1 class="title wow fadeInDown" data-wow-delay=.3s>Nos services</h1>
+<p class="wow fadeInDown" data-wow-delay=.5s>Aliquam lobortis. Maecenas vestibulum mollis diam. Pellentesque auctor neque nec urna. Nulla sit amet est. Aenean posuere tortor sed cursus feugiat, nunc augue blandit nunc, eu sollicitudin urna dolor sagittis lacus.</p>
+</div>
+<div class=row>
+<div class="col-md-4 col-sm-6">
+<figure class="wow fadeInLeft animated portfolio-item" data-wow-duration=500ms data-wow-delay=0ms>
+<div class=img-wrapper>
+<img src=/images/logo.png class=img-fluid alt="this is a title">
+<div class=overlay>
+<div class=buttons>
+<a rel=gallery class=fancybox href=/images/logo.png>Demo</a>
+<a href=https://baretto-labs.github.io/services/agility_at_scale/>Details</a>
+</div>
+</div>
+</div>
+<figcaption>
+<h4>
+<a href=https://baretto-labs.github.io/services/agility_at_scale/>
+Agility at scale
+</a>
+</h4>
+<p>
+Product Mockup
+</p>
+</figcaption>
+</figure>
+</div>
+<div class="col-md-4 col-sm-6">
+<figure class="wow fadeInLeft animated portfolio-item" data-wow-duration=500ms data-wow-delay=300ms>
+<div class=img-wrapper>
+<img src=/images/courses/item-2.jpg class=img-fluid alt="this is a title">
+<div class=overlay>
+<div class=buttons>
+<a rel=gallery class=fancybox href=/images/courses/item-2.jpg>Demo</a>
+<a href=https://baretto-labs.github.io/services/coaching/>Details</a>
+</div>
+</div>
+</div>
+<figcaption>
+<h4>
+<a href=https://baretto-labs.github.io/services/coaching/>
+Coaching
+</a>
+</h4>
+<p>
+Product Mockup
+</p>
+</figcaption>
+</figure>
+</div>
+<div class="col-md-4 col-sm-6">
+<figure class="wow fadeInLeft animated portfolio-item" data-wow-duration=500ms data-wow-delay=600ms>
+<div class=img-wrapper>
+<img src=/images/courses/item-2.jpg class=img-fluid alt="this is a title">
+<div class=overlay>
+<div class=buttons>
+<a rel=gallery class=fancybox href=/images/courses/item-2.jpg>Demo</a>
+<a href=https://baretto-labs.github.io/services/team_building/>Details</a>
+</div>
+</div>
+</div>
+<figcaption>
+<h4>
+<a href=https://baretto-labs.github.io/services/team_building/>
+Team building
+</a>
+</h4>
+<p>
+Product Mockup
+</p>
+</figcaption>
+</figure>
+</div>
+</div>
+</div>
+</section>
+<section id=feature>
+<div class=container>
+<div class=section-heading>
+<h1 class="title wow fadeInDown" data-wow-delay=.3s>Nos services</h1>
+<p class="wow fadeInDown" data-wow-delay=.5s>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed, <br> quasi dolores numquam dolor vero ex, tempora commodi repellendus quod laborum.
+</p>
+</div>
+<div class=row>
+<div class="col-sm-6 col-lg-4">
+<div class="media wow fadeInUp animated" data-wow-duration=500ms data-wow-delay=300ms>
+<div class=media-left>
+<div class=icon>
+<i class=ion-ios-flask-outline></i>
+</div>
+</div>
+<div class=media-body>
+<h4 class=media-heading>Software engering</h4>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum, sint.
+</p>
+</div>
+</div>
+</div>
+<div class="col-sm-6 col-lg-4">
+<div class="media wow fadeInUp animated" data-wow-duration=500ms data-wow-delay=600ms>
+<div class=media-left>
+<div class=icon>
+<i class=ion-ios-lightbulb-outline></i>
+</div>
+</div>
+<div class=media-body>
+<h4 class=media-heading>Agile Team</h4>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum, sint.
+</p>
+</div>
+</div>
+</div>
+<div class="col-sm-6 col-lg-4">
+<div class="media wow fadeInUp animated" data-wow-duration=500ms data-wow-delay=900ms>
+<div class=media-left>
+<div class=icon>
+<i class=ion-ios-americanfootball-outline></i>
+</div>
+</div>
+<div class=media-body>
+<h4 class=media-heading>Coaching</h4>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum, sint.
+</p>
+</div>
+</div>
+</div>
+<div class="col-sm-6 col-lg-4">
+<div class="media wow fadeInUp animated" data-wow-duration=500ms data-wow-delay=1200ms>
+<div class=media-left>
+<div class=icon>
+<i class=ion-ios-keypad-outline></i>
+</div>
+</div>
+<div class=media-body>
+<h4 class=media-heading>Formation</h4>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum, sint.
+</p>
+</div>
+</div>
+</div>
+<div class="col-sm-6 col-lg-4">
+<div class="media wow fadeInUp animated" data-wow-duration=500ms data-wow-delay=1500ms>
+<div class=media-left>
+<div class=icon>
+<i class=ion-ios-barcode-outline></i>
+</div>
+</div>
+<div class=media-body>
+<h4 class=media-heading>Développement</h4>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum, sint.
+</p>
+</div>
+</div>
+</div>
+<div class="col-sm-6 col-lg-4">
+<div class="media wow fadeInUp animated" data-wow-duration=500ms data-wow-delay=1800ms>
+<div class=media-left>
+<div class=icon>
+<i class=ion-ios-lightbulb-outline></i>
+</div>
+</div>
+<div class=media-body>
+<h4 class=media-heading>Tests</h4>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum, sint.
+</p>
+</div>
+</div>
+</div>
+</div>
+</div>
+</section>
+<section id=call-to-action>
+<div class=container>
+<div class=row>
+<div class=col-md-12>
+<div class=block>
+<h2 class="title wow fadeInDown" data-wow-delay=.3s data-wow-duration=500ms>Envie de discuter ?</h1>
+<p class="wow fadeInDown" data-wow-delay=.5s data-wow-duration=500ms>
+Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis,<br>possimus commodi, fugiat magnam temporibus vero magni recusandae? Dolore, maxime praesentium.</p>
+<a href=/contact class="btn btn-default btn-contact wow fadeInDown" data-wow-delay=.7s data-wow-duration=500ms>Contact with me</a>
 </div>
 </div>
 </div>
@@ -83,6 +277,9 @@
 </div>
 <div class="col-md-4 col-12">
 <ul class="social text-center text-md-right text-lg-right">
+<li><a href=#><i class=ion-social-facebook></i></a></li>
+<li><a href=#><i class=ion-social-instagram></i></a></li>
+<li><a href=#><i class=ion-social-linkedin></i></a></li>
 </ul>
 </div>
 </div>
