--- a/services/agility_at_scale/index.html
+++ b/services/agility_at_scale/index.html
@@ -5,7 +5,7 @@
 <meta name=author content="baretto">
 <meta name=generator content="Hugo 0.87.0">
 <meta name=viewport content="width=device-width,initial-scale=1">
-<title>Agility</title>
+<title>Agility at scale</title>
 <link rel=icon href=https://baretto-labs.github.io/images/favicon.ico>
 <link rel=stylesheet href=https://baretto-labs.github.io/plugins/bootstrap/bootstrap.min.css>
 <link rel=stylesheet href=https://baretto-labs.github.io/plugins/ionicons/ionicons.min.css>
@@ -36,7 +36,10 @@
 <a class=nav-link href=https://baretto-labs.github.io/about>About</a>
 </li>
 <li class=nav-item>
-<a class=nav-link href=https://baretto-labs.github.io/courses>Courses</a>
+<a class=nav-link href=https://baretto-labs.github.io/formations>Formations</a>
+</li>
+<li class=nav-item>
+<a class=nav-link href=https://baretto-labs.github.io/services>Services</a>
 </li>
 <li class=nav-item>
 <a class=nav-link href=https://baretto-labs.github.io/blog>Blog</a>
@@ -53,10 +56,10 @@
 <div class=row>
 <div class=col-md-12>
 <div class=block>
-<h2>Agility</h2>
+<h2>Agility at scale</h2>
 <div class=portfolio-meta>
 <span>2018-07-12</span>|
-<span> Category: agility, courses</span>|
+<span> Category: agility, scale</span>|
 <span> website:
 <a href=https://www.themefisher.com>https://www.themefisher.com</a>
 </span>
@@ -71,22 +74,43 @@
 <div class=row>
 <div class=col-lg-8>
 <div class=work-single-image>
-<img class="img-fluid w-100" src=https://baretto-labs.github.io/images/courses/item-2.jpg alt=work-single-image>
+<img class="img-fluid w-100" src=https://baretto-labs.github.io/images/logo.png alt=work-single-image>
 </div>
 <div class=work-single-content>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas sit expedita, iusto repellendus cumque, officia architecto consequatur illo fuga eum sed ut autem eos voluptas. Nemo, a, rem! Atque quisquam aperiam eaque tenetur autem, soluta itaque omnis. Minus nesciunt, sint, animi illum quo ab voluptate esse delectus unde maiores iure, quasi a suscipit ipsam aliquid voluptatem. Perspiciatis eveniet, pariatur illum aut cum dolor neque consequatur error aliquid facilis in quasi temporibus assumenda tempore, doloremque autem saepe enim nihil. Voluptates asperiores ullam voluptate quas similique ratione quia hic, eum distinctio laboriosam, consectetur tempora voluptatibus optio natus cumque est necessitatibus dolore alias.</p>
+<h3 id=consectur-in-bibendum>Consectur in Bibendum</h3>
+<p>Totam rem aperiam eaque ipsa quae illo inventore veritatis et quasi architebetea.vitae dicta sunt explicabo. nemo enim ipsam volup as tatem quia voluptassit aspernatur.aut odit aut fugit sed quia consequuntur magni dolores eo ratione voluptatem.sequi nesciunt neque porro quisquam est dolorem ipsum quia dolor amet consectetur adipisci velit. lorem ipsum dolor sit amet consectetur adipisicing elit sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+<p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim est laborum. Sed ut perspiciatis unde omnis iste natus. error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.</p>
+<blockquote>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt labore et dolore magna aliqua. ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo.</p>
+</blockquote>
+<p>Consequuntur magni dolores ratione voluptatem.sequi nesciunt neque porro quisquam est dolorem ipsum quia dolor sit amet consectetur adipisci velit.lorem ipsum dolor sit amet consectetur adipisicing elit sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. ut enim ad minim veniam quis nostrud exercitation ullamco laboris nisi ut aliquip commodo consequat.</p>
+<p>Reprehenderit in voluptate velit esse cillum dolore fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident. sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus.</p>
 </div>
 </div>
 <div class=col-lg-4>
 <div class=work-single-sidebar>
 <h5>Clients</h5>
-<h6>eilco</h6>
+<h6>Amazon</h6>
 <h5>date</h5>
 <h6>November 20, 2017</h6>
 <h5>category</h5>
 <h6>Investment, Business</h6>
 <h5>locations</h5>
-<h6>calais</h6>
+<h6>1201 park street, Avenue, Dhaka</h6>
+</div>
+</div>
+</div>
+</div>
+</section>
+<section id=call-to-action>
+<div class=container>
+<div class=row>
+<div class=col-md-12>
+<div class=block>
+<h2 class="title wow fadeInDown" data-wow-delay=.3s data-wow-duration=500ms>Envie de discuter ?</h1>
+<p class="wow fadeInDown" data-wow-delay=.5s data-wow-duration=500ms>
+Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis,<br>possimus commodi, fugiat magnam temporibus vero magni recusandae? Dolore, maxime praesentium.</p>
+<a href=/contact class="btn btn-default btn-contact wow fadeInDown" data-wow-delay=.7s data-wow-duration=500ms>Contact with me</a>
 </div>
 </div>
 </div>
@@ -107,6 +131,9 @@
 </div>
 <div class="col-md-4 col-12">
 <ul class="social text-center text-md-right text-lg-right">
+<li><a href=#><i class=ion-social-facebook></i></a></li>
+<li><a href=#><i class=ion-social-instagram></i></a></li>
+<li><a href=#><i class=ion-social-linkedin></i></a></li>
 </ul>
 </div>
 </div>
