deploy: 278c2a08be979d64e0fd011e8bee5d9871736eb8

--- a/formations/quality/index.html
+++ b/formations/quality/index.html
@@ -5,7 +5,7 @@
 <meta name=author content="baretto">
 <meta name=generator content="Hugo 0.88.1">
 <meta name=viewport content="width=device-width,initial-scale=1">
-<title>Coaching</title>
+<title>Quality</title>
 <link rel=icon href=https://baretto-labs.github.io/images/favicon.ico>
 <link rel=stylesheet href=https://baretto-labs.github.io/plugins/bootstrap/bootstrap.min.css>
 <link rel=stylesheet href=https://baretto-labs.github.io/plugins/ionicons/ionicons.min.css>
@@ -56,10 +56,10 @@
 <div class=row>
 <div class=col-md-12>
 <div class=block>
-<h2>Coaching</h2>
+<h2>Quality</h2>
 <div class=portfolio-meta>
 <span>2018-07-12</span>|
-<span> Category: agility, courses</span>|
+<span> Category: quality, courses</span>|
 <span> website:
 <a href=https://www.themefisher.com>https://www.themefisher.com</a>
 </span>
@@ -83,13 +83,13 @@
 <div class=col-lg-4>
 <div class=work-single-sidebar>
 <h5>Clients</h5>
-<h6>eilco</h6>
+<h6>mydigitalschool</h6>
 <h5>date</h5>
-<h6>November 20, 2017</h6>
+<h6>November 20, 2021</h6>
 <h5>category</h5>
 <h6>Investment, Business</h6>
 <h5>locations</h5>
-<h6>calais</h6>
+<h6>Lille</h6>
 </div>
 </div>
 </div>
