--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <meta charset=utf-8>
 <meta name=description content="Baretto website">
 <meta name=author content="baretto">
-<meta name=generator content="Hugo 0.87.0">
+<meta name=generator content="Hugo 0.88.1">
 <meta name=viewport content="width=device-width,initial-scale=1">
 <title>Baretto</title>
 <link rel=icon href=https://baretto-labs.github.io/images/favicon.ico>
@@ -58,7 +58,7 @@
 <div class="block wow fadeInUp" data-wow-delay=.3s>
 <section class=cd-intro>
 <h1 class="wow fadeInUp animated cd-headline slide" data-wow-delay=.4s>
-<span>Chez Baretto, nous sommes</span>
+<span>Chez Baretto, nous sommes ...</span>
 <br>
 <span class="cd-words-wrapper text-center">
 <b class=is-visible style=white-space:normal>CRAFTMEN</b>
@@ -84,6 +84,29 @@
 <div class="col-md-4 col-sm-6">
 <figure class="wow fadeInLeft animated portfolio-item" data-wow-duration=500ms data-wow-delay=0ms>
 <div class=img-wrapper>
+<img src=/images/courses/item-2.jpg class=img-fluid alt="this is a title">
+<div class=overlay>
+<div class=buttons>
+<a rel=gallery class=fancybox href=/images/courses/item-2.jpg>Demo</a>
+<a href=https://baretto-labs.github.io/formations/agility/>Details</a>
+</div>
+</div>
+</div>
+<figcaption>
+<h4>
+<a href=https://baretto-labs.github.io/formations/agility/>
+Agility
+</a>
+</h4>
+<p>
+Product Mockup
+</p>
+</figcaption>
+</figure>
+</div>
+<div class="col-md-4 col-sm-6">
+<figure class="wow fadeInLeft animated portfolio-item" data-wow-duration=500ms data-wow-delay=300ms>
+<div class=img-wrapper>
 <img src=/images/logo.png class=img-fluid alt="this is a title">
 <div class=overlay>
 <div class=buttons>
@@ -105,7 +128,7 @@ Product Mockup
 </figure>
 </div>
 <div class="col-md-4 col-sm-6">
-<figure class="wow fadeInLeft animated portfolio-item" data-wow-duration=500ms data-wow-delay=300ms>
+<figure class="wow fadeInLeft animated portfolio-item" data-wow-duration=500ms data-wow-delay=600ms>
 <div class=img-wrapper>
 <img src=/images/courses/item-2.jpg class=img-fluid alt="this is a title">
 <div class=overlay>
@@ -128,7 +151,30 @@ Product Mockup
 </figure>
 </div>
 <div class="col-md-4 col-sm-6">
-<figure class="wow fadeInLeft animated portfolio-item" data-wow-duration=500ms data-wow-delay=600ms>
+<figure class="wow fadeInLeft animated portfolio-item" data-wow-duration=500ms data-wow-delay=900ms>
+<div class=img-wrapper>
+<img src=/images/courses/item-2.jpg class=img-fluid alt="this is a title">
+<div class=overlay>
+<div class=buttons>
+<a rel=gallery class=fancybox href=/images/courses/item-2.jpg>Demo</a>
+<a href=https://baretto-labs.github.io/formations/quality/>Details</a>
+</div>
+</div>
+</div>
+<figcaption>
+<h4>
+<a href=https://baretto-labs.github.io/formations/quality/>
+Quality
+</a>
+</h4>
+<p>
+Product Mockup
+</p>
+</figcaption>
+</figure>
+</div>
+<div class="col-md-4 col-sm-6">
+<figure class="wow fadeInLeft animated portfolio-item" data-wow-duration=500ms data-wow-delay=1200ms>
 <div class=img-wrapper>
 <img src=/images/courses/item-2.jpg class=img-fluid alt="this is a title">
 <div class=overlay>
